# grim

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.gradle  build.rs  build_and_run.sh  build_run_android.sh  build_run_linux.sh  rustfmt.toml
.forgejo/workflows/: android.yaml  build.yaml  linux.yaml  macos.yaml  pr.yaml  release.yaml  windows.yaml
.github/: download_release.sh
.github/workflows/: build.yml  release.yml
.hooks/: pre-commit
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/mw/gri/android/: BackgroundService.java  FileProvider.java  MainActivity.java  NotificationActionsReceiver.java  Utils.java
android/app/src/main/res/drawable-anydpi/: ic_close.xml
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/xml/: paths.xml
android/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/mw/gri/android/: BackgroundService.java  MainActivity.java  Utils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  themes.xml
app/src/main/res/values-night/: themes.xml
linux/: build_release.sh
linux/Grim.AppDir/: .DirIcon  grim.desktop
locales/: de.yml  en.yml  fr.yml  ru.yml  tr.yml  zh-CN.yml  zh-TC.yml
macos/: build_release.sh
macos/Grim.app/Contents/: Info.plist
macos/Grim.app/Contents/MacOS/: .gitignore
macos/Grim.app/Contents/Resources/: AppIcon.icns
scripts/: android.sh  build_run_android.sh  desktop.sh  release_linux.sh  release_macos.sh  version.sh  webtunnel.bat  webtunnel.sh
scripts/macos/Grim.app/Contents/_CodeSignature/: CodeResources
src/: config.rs  grim.rs  lib.rs  logger.rs  main.rs  settings.rs
src/gui/: app.rs  colors.rs  icons.rs  mod.rs  nav.rs  navigator.rs  renderer.rs
src/gui/platform/: mod.rs
src/gui/platform/android/: mod.rs
src/gui/platform/desktop/: mod.rs
src/gui/screens/: account.rs  accounts.rs  main.rs  mod.rs  navigator.rs  root.rs  wallets.rs
src/gui/views/: accounts.rs  camera.rs  common.rs  content.rs  file.rs  file_pick.rs  keyboard.rs  mod.rs  modal.rs  navigation.rs  network.rs  network_metrics.rs  network_mining.rs  network_node.rs  network_settings.rs  progress_loading.rs  pull_to_refresh.rs  qr.rs  root.rs  scan.rs  settings_node.rs  settings_node_server.rs  settings_stratum.rs  title_panel.rs  types.rs  views.rs
src/gui/views/accounts/: accounts.rs  content.rs  mod.rs
src/gui/views/input/: edit.rs  keyboard.rs  mod.rs  types.rs
src/gui/views/network/: configs.rs  connections.rs  container.rs  content.rs  metrics.rs  mining.rs  mod.rs  network.rs  node.rs  node_settings.rs  settings.rs  types.rs
src/gui/views/network/configs/: dandelion.rs  node.rs  p2p.rs  pool.rs  server.rs  stratum.rs
src/gui/views/network/connections/: content.rs  mod.rs
src/gui/views/network/modals/: ext_conn.rs  mod.rs  share_conn.rs
src/gui/views/network/settings/: server.rs  stratum.rs
src/gui/views/network/setup/: dandelion.rs  mod.rs  node.rs  p2p.rs  pool.rs  stratum.rs
src/gui/views/settings/: content.rs  interface.rs  mod.rs  network.rs  storage.rs  tor.rs
src/gui/views/wallets/: content.rs  mod.rs  wallet.rs  wallets.rs
src/gui/views/wallets/creation/: connection.rs  content.rs  creation.rs  mnemonic.rs  mod.rs  types.rs
src/gui/views/wallets/modals/: add.rs  changelog.rs  conn.rs  connection.rs  list.rs  mod.rs  open.rs  settings.rs  wallets.rs
src/gui/views/wallets/setup/: common.rs  connection.rs  main.rs  mod.rs  recovery.rs  types.rs
src/gui/views/wallets/wallet/: accounts.rs  content.rs  info.rs  message.rs  messages.rs  mod.rs  proof.rs  receive.rs  send.rs  settings.rs  transport.rs  txs.rs  types.rs
src/gui/views/wallets/wallet/account/: content.rs  create.rs  list.rs  mod.rs
src/gui/views/wallets/wallet/messages/: content.rs  mod.rs  request.rs
src/gui/views/wallets/wallet/modals/: accounts.rs  mod.rs  scan.rs
src/gui/views/wallets/wallet/request/: invoice.rs  mod.rs  send.rs
src/gui/views/wallets/wallet/settings/: common.rs  connection.rs  content.rs  mod.rs  recovery.rs
src/gui/views/wallets/wallet/transport/: content.rs  mod.rs  send.rs  settings.rs
src/gui/views/wallets/wallet/txs/: content.rs  mod.rs  tx.rs
src/http/: client.rs  mod.rs  release.rs
src/node/: config.rs  mine_block.rs  mod.rs  node.rs  stratum.rs  types.rs
src/settings/: config.rs  mod.rs  settings.rs
src/tor/: config.rs  http.rs  mod.rs  tor.rs  types.rs
src/wallet/: config.rs  keys.rs  list.rs  mnemonic.rs  mod.rs  seed.rs  selection.rs  store.rs  tx.rs  types.rs  updater.rs  utils.rs  wallet.rs  wallets.rs
src/wallet/connections/: config.rs  external.rs  mod.rs
wix/: main.wxs
