[package]
name = "grim"
version = "0.2.3"
authors = ["Ardocrat <ardocrat@proton.me>"]
description = "Cross-platform GUI for Grin with focus on usability and availability to be used by anyone, anywhere."
license = "Apache-2.0"
repository = "https://github.com/ardocrat/grim"
keywords = [ "crypto", "grin", "mimblewimble" ]
edition = "2021"

[[bin]]
name = "grim"
path = "src/main.rs"

[lib]
name="grim"
crate-type = ["rlib"]

[profile.release-apk]
inherits = "release"
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
log = "0.4.22"

## node
openssl-sys = { version = "0.9.103", features = ["vendored"] }
grin_api = "5.3.3"
grin_chain = "5.3.3"
grin_config = "5.3.3"
grin_core = "5.3.3"
grin_p2p = "5.3.3"
grin_servers = "5.3.3"
grin_keychain = "5.3.3"
grin_util = "5.3.3"

## wallet
grin_wallet_impls = "5.3.3"
grin_wallet_api = "5.3.3"
grin_wallet_libwallet = "5.3.3"
grin_wallet_util = "5.3.3"
grin_wallet_controller = "5.3.3"

## ui
egui = { version = "0.29.1", default-features = false }
egui_extras = { version = "0.29.1", features = ["image", "svg"] }
rust-i18n = "2.3.1"

## other
anyhow = "1.0.89"
pin-project = "1.1.6"
backtrace = "0.3.74"
thiserror = "1.0.64"
futures = "0.3.31"
dirs = "5.0.1"
sys-locale = "0.3.1"
chrono = "0.4.38"
parking_lot = "0.12.3"
lazy_static = "1.5.0"
toml = "0.8.19"
serde = "1.0.210"
local-ip-address = "0.6.3"
url = "2.5.2"
rand = "0.8.5"
serde_derive = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
image = "0.25.2"
rqrr = "0.8.0"
qrcodegen = "1.8.0"
qrcode = "0.14.1"
ur = "0.4.1"
gif = "0.13.1"
rkv = { version = "0.19.0", features = ["lmdb"] }

## tor
arti-client = { version = "0.28.0", features = ["pt-client", "static", "onion-service-service", "onion-service-client"] }
tor-rtcompat = { version = "0.28.0", features = ["static"] }
tor-config = "0.28.0"
fs-mistrust = "0.9.0"
tor-hsservice = "0.28.0"
tor-hsrproxy = "0.28.0"
tor-keymgr = "0.28.0"
tor-llcrypto = "0.28.0"
tor-hscrypto = "0.28.0"
tor-error = "0.28.0"
sha2 = "0.10.8"
ed25519-dalek = "2.1.1"
curve25519-dalek = "4.1.3"
hyper = { version = "0.14.30", features = ["full"] }
hyper-tls = "0.5.0"
tls-api = "0.12.0"
tls-api-native-tls = "0.12.1"

## stratum server
tokio-old = {version = "0.2", features = ["full"], package = "tokio" }
tokio-util-old = { version = "0.2", features = ["codec"], package = "tokio-util" }

[target.'cfg(target_os = "linux")'.dependencies]
nokhwa = { version = "0.10.5", default-features = false, features = ["input-v4l"] }

[target.'cfg(target_os = "windows")'.dependencies]
nokhwa = { version = "0.10.5", default-features = false, features = ["input-msmf"] }

[target.'cfg(target_os = "macos")'.dependencies]
eye = { git = "https://github.com/raymanfx/eye-rs", rev = "5b7e3f7a1e79966091692896c568aab042e449ef", default-features = false }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.3"
winit = { version = "0.30.5" }
eframe = { version = "0.29.1", features = ["wgpu", "glow"] }
arboard = "3.2.0"
rfd = "0.15.0"
interprocess = { version = "2.2.1", features = ["tokio"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"
jni = "0.21.1"
wgpu = "22.1.0"
android-activity = { version = "0.6.0", features = ["game-activity"] }
winit = { version = "0.30.5", features = ["android-game-activity"] }
eframe = { version = "0.29.1", features = ["wgpu", "android-game-activity"] }

[patch.crates-io]
openpnp_capture = { git = "https://github.com/ardocrat/openpnp-capture-rs", rev = "f9b06f627c5e5d42c672d117650af700846ca6cf" }
egui_extras = { git = "https://github.com/emilk/egui", rev = "5b846b4554fe47269affb43efef2cad8710a8a47" }
egui = { git = "https://github.com/emilk/egui", rev = "5b846b4554fe47269affb43efef2cad8710a8a47" }
eframe = { git = "https://github.com/emilk/egui", rev = "5b846b4554fe47269affb43efef2cad8710a8a47" }
### patch grin store
#grin_store = { path = "../grin-store" }
